# projeto_integrador_3

./: .gitignore  README.md
Aplicativo/: Projeto_IntegradoIII (2).aia
Arquivos de modelagem 3D/: Modelagem 2D produto.odg
Arquivos de modelagem 3D/Fusion/: Dosador.f3d
Artigo/: ~$SENVOLVIMENTO DE UM ALIMENTADOR AUTOMÁTICO .docx
Firmware/AlimentadorGato/main/: CMakeLists.txt  main.c  servo.c  servo.h
Firmware/ESP_WIFI_AP/: CMakeLists.txt  sdkconfig.old
Firmware/ESP_WIFI_AP/main/: main.c  softap_example_main.c
Firmware/RTC_teste/main/: main.c
Firmware/blink/: .cproject
Firmware/feeder/: sdkconfig
Firmware/feeder/main/: CMakeLists.txt  defines.h  driver_init.c  driver_init.h  i2c-lcd.c  i2c-lcd.h  i2c_driver.c  main.c  rtc.c  rtc.h  servo.c  servo.h  stateMachine.c  stateMachine.h  timer_utils.c  timer_utils.h  wifi.c  wifi.h
Firmware/feeder/test_servo/: .cproject  .project
Firmware/i2c_lcd/main/: i2c-lcd.c  i2c_simple_main.c
Firmware/test_wifi/: CMakeLists.txt
Firmware/test_wifi/main/: station_example_main.c
Firmware/touch_pad_read/: .cproject  .project
Firmware/touch_pad_read/main/: .cproject  CMakeLists.txt  defines.h  driver_init.c  driver_init.h  tp_read_main.c
Imagens/: teste servo.jfif
Projeto da PCI/: PCB_PCB_PI_3_Alimentador_de_gato_2025-02-12.json
Revista ilha digital/: Template - Ilha Digital.docx
código/RTC_teste/: .cproject  .project
código/RTC_teste/main/: main.c
código/blink/main/: blink_example_main.c
código/i2c_lcd/: .cproject  .project
código/i2c_simple/: .cproject
código/teste_rtc/: .cproject  .project
(+11 files in other folders)
