idf_component_register(SRCS     "rtc.c" 
                                "main.c"
                                "servo.c"
                                "driver_init.c"  
                                "timer_utils.c" 
                                "wifi.c"
                                "i2c-lcd.c"
                                "stateMachine.c"  
                    INCLUDE_DIRS "")
